src/test/deca/context/invalid/test_error_2.5-4.deca
// Description:
//    Soulève l'erreur (2.5)
//
// Resultat:
//    Erreur contextuelle
//    Ligne 13 : Un champ ne peut pas être de type 'void' (2.5)
//
// Historique:
//      cree le 14/01/2022


class A {
    protected void i = 42.9;
}

